[package]
name = "raugeas"
version = "0.2.1"
authors = ["panicbit <panicbit.dev@gmail.com>", "David Lutterkort <lutter@watzmann.net>", "Alexis Mousset <alexis.mousset@rudder.io>"]
description = "Augeas bindings for Rust"
license = "MIT"
keywords = ["augeas", "bindings"]
repository = "https://github.com/amousset/rust-augeas"
edition = "2021"
rust-version = "1.77"

[dependencies]
raugeas_sys = { path = "../raugeas_sys", version = "0.2.0" }
bitflags = "2.6.0"
libc = "0.2.43"
